src/objects/Pkg_Size__c.object
<CustomObject>
    <fields>
        <fullName>ERP_Code__c</fullName>
        <label>ERP Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empty_Weight_Kg__c</fullName>
        <label>Empty Weight Kg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vol_L__c</fullName>
        <label>Vol L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pkg Size</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Empty_Weight_Kg__c</columns>
        <columns>Vol_L__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pkg Size Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pkg Size</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>